Fix horizontal scrollbar issue #1

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,16 +65,17 @@ h1 {
   border-radius: 5px;
   padding: 16px;
   margin: 16px 0;
-  background-color: var(--highlight-color);
+  background-color: var(--primary-color);
   color: #fff;
 
   /*background-color: #dee2ee;*/
 }
 
-.testimonial > img {
+.testimonial img {
   border-radius: 50%;
   width: 90px;
   height: 90px;
+  object-fit: contain;
 }
 
 .checked {
